--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>"How Much Meat is Too Much Meat?"</h2>
-							<p>
-							Read all about it<link href="https://medium.com/@murwah6/how-much-meat-is-too-much-meat-c9538d96900e"></p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button">Read all about it</a></li>
 							</ul>
 						</div>
 						<div class="image">
