--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="image/Blog-post#1.jpg" alt="" />
+							<img src="Blog-post#1.jpg" alt="" />
 						</div>
 					</section>
 
