new title photo

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="Blog-post#1.jpg" alt="" />
+							<img src="title-photo.jpg" alt="" />
 						</div>
 					</section>
 
@@ -320,7 +320,7 @@
 							</form>
 
 						</div>
-					
+
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
