--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="title-photo.jpg" alt="" />
+							<img src="images/title-photo.jpg" alt="" />
 						</div>
 					</section>
 
