--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="Blog-post#1.jpg" alt="" />
+							<img src="images/Blog-post#1.jpg" alt="" />
 						</div>
 					</section>
 
@@ -298,7 +298,7 @@
 				<!-- Seven -->
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
-							
+
 						</div>
 
 
