--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>"How Much Meat is Too Much Meat?"</h2>
+							<p>Should you change your diet?</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Read all about it</a></li>
+								<li><a href="#" class="button">Learn More</a></li>
 							</ul>
 						</div>
 						<div class="image">
