--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/spotlight02.jpg" alt="" />
+							<img src="images/bacteria.jpg" alt="" />
 						</div>
 					</section>
 
