--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/immune.jpg" alt="" />
+							<img src="images/immune2.jpg" alt="" />
 						</div>
 					</section>
 
