--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
-									<span class="icon style2 major fa-diamond"></span>
+									<span class="fab fa-youtube"></span>
 									<h3>Healthy Hokies Podcast</h3>
 									<p>Listen to the first ever episode of the healthy hokies series. Two students describe their journey with food and how they manage to maintain a healthy diet in college.</p>
 								</section>
@@ -98,7 +98,7 @@
 					</section>
 
 				<!-- Seven -->
-					
+
 						<div class="inner medium">
 
 						</div>
