--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 									<p>Listen to the first ever episode of the healthy hokies series. Two students describe their journey with food and how they manage to maintain a healthy diet in college.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-save"></span>
+									<span class="icon style2 major fa-youtube"></span>
 									<h3>Healthy Hokies Challenge Video</h3>
 									<p>Watch as two undergraduate students attempt a week-long healthy challenge while juggling their rigorous work load.</p>
 								</section>
