--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
 									<h3>Healthy Hokies Challenge Video</h3>
 									<p>Watch as two undergraduate students attempt a week-long healthy challenge while juggling their rigorous work load.</p>
 								</section>
+								<section>
+									<span class="icon style2 major fa-stethoscope"></span>
+									<h3>Harvard Health</h3>
+									<p>Read this article for some outsider information about maintaining a healthy lifestyle.</p>
+								</section>
 							</div>
 						</div>
 					</section>
