--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Not in the mood to read? Listen and watch students gives tips on how to be healthy in college!</h2>
+							<h2>Want more information? Here are some more tips on how stay healthy!</h2>
 
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
@@ -112,7 +112,7 @@
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
-				
+
 							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
