--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 							<h2>"How Much Meat is Too Much Meat?"</h2>
 							<p>Should you change your diet?</p>
 							<ul class="actions stacked">
-								<li><a href="https://medium.com/@murwah6/how-much-meat-is-too-much-meat-c9538d96900e" class="button">Learn More</a></li>
+								<li><a href="https://medium.com/@murwah6/how-much-meat-is-too-much-meat-c9538d96900e" class="button">Read More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -47,7 +47,7 @@
 							<h2>"Bacteria is good for you? Who knew?"</h2>
 							<p>Read more about all healthy bacteria you should be putting in your body here!</p>
 							<ul class="actions stacked">
-								<li><a href="https://medium.com/@murwah6/bacteria-is-good-for-you-who-knew-86c5e207d00e" class="button">Learn More</a></li>
+								<li><a href="https://medium.com/@murwah6/bacteria-is-good-for-you-who-knew-86c5e207d00e" class="button">Read More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -61,7 +61,7 @@
 							<h2>5 Steps to Build Your Immune System</h2>
 							<p>Five easy steps that will last you a last time.</p>
 							<ul class="actions stacked">
-								<li><a href="https://medium.com/@murwah6/5-steps-to-build-your-immune-system-26810a2bf090" class="button">Learn More</a></li>
+								<li><a href="https://medium.com/@murwah6/5-steps-to-build-your-immune-system-26810a2bf090" class="button">Read More</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -113,7 +113,7 @@
 					<footer class="wrapper style1 align-center">
 						<div class="inner">
 
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; Murwah Murad. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
