--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
 									<p>Listen to the first ever episode of the healthy hokies series. Two students describe their journey with food and how they manage to maintain a healthy diet in college.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-youtube"></span>
+									<a href="https://www.youtube.com/watch?v=9tXQ0ovM5qY&feature=youtu.be"><span class="icon style2 major fa-youtube"></span></a>
 									<h3>Healthy Hokies Challenge Video</h3>
 									<p>Watch as two undergraduate students attempt a week-long healthy challenge while juggling their rigorous work load.</p>
 								</section>
 								<section>
-									<span class="icon style2 major fa-stethoscope"></span>
+									<a href="https://www.health.harvard.edu/topics/staying-healthy"><span class="icon style2 major fa-stethoscope"></span></a>
 									<h3>Harvard Health</h3>
 									<p>Read this article for some outsider information about maintaining a healthy lifestyle.</p>
 								</section>
