--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Murwah Murad</h1>
-							<p>The guide for healthy eating for college students</p>
+							<p>A guide on how to maintain a nutritious diet and a fit lifestyle in college! Read, listen and watch undergraduate students reflect on their experiences and give tips how to manage to stay healthy in a high-stress environment.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
 							</ul>
@@ -31,7 +31,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
 							<h2>"How Much Meat is Too Much Meat?"</h2>
-							<p>Should you change your diet?</p>
+							<p>Should you change your diet to eat less meat? What are the benefits? What are drawbacks? Learn more about how you can adjust your diet on a college campus to stay in good health!</p>
 							<ul class="actions stacked">
 								<li><a href="https://medium.com/@murwah6/how-much-meat-is-too-much-meat-c9538d96900e" class="button">Read More</a></li>
 							</ul>
