--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
 								<section>
 									<a href= "https://soundcloud.com/ulnazayed/healthy-hokies-ep1/s-5JjJd"><span class="icon style2 major fa-microphone"></span></a>
 									<h3>Healthy Hokies Podcast</h3>
-									<p>Listen to the first ever episode of the healthy hokies series. Two students describe their journey with food and how they manage to maintain a healthy diet in college.</p>
+									<p>Listen to the first ever episode of the healthy hokies series. Two students describe their journey with food, dining halls and how they manage to maintain a healthy diet while living on and off of campus.</p>
 								</section>
 								<section>
 									<a href="https://www.youtube.com/watch?v=9tXQ0ovM5qY&feature=youtu.be"><span class="icon style2 major fa-youtube"></span></a>
-									<h3>Healthy Hokies Challenge Video</h3>
-									<p>Watch as two undergraduate students attempt a week-long healthy challenge while juggling their rigorous work load.</p>
+									<h3>Healthy Hokies Challenge</h3>
+									<p>Watch as two undergraduate students attempt a week-long healthy challenge while juggling their rigorous work load.Is it possible to eat the right amount of calories, get enough sleep and exercise every day in college? Watch and find out!</p>
 								</section>
 								<section>
 									<a href="https://www.health.harvard.edu/topics/staying-healthy"><span class="icon style2 major fa-stethoscope"></span></a>
@@ -107,7 +107,6 @@
 						<div class="inner medium">
 
 						</div>
-
 
 				<!-- Footer -->
 					<footer class="wrapper style1 align-center">
