--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>"Bacteria is good for you? Who knew?"</h2>
-							<p>Read more about all healthy bacteria you should be putting in your body here!</p>
+							<p>Have you ever heard of probiotics? Read all about a student's experience with probiotics and the healthy bacteria that you should be putting into your body here!</p>
 							<ul class="actions stacked">
 								<li><a href="https://medium.com/@murwah6/bacteria-is-good-for-you-who-knew-86c5e207d00e" class="button">Read More</a></li>
 							</ul>
@@ -59,7 +59,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>5 Steps to Build Your Immune System</h2>
-							<p>Five easy steps that will last you a last time.</p>
+							<p>When cold season comes around you will want to be prepared. Use these five steps to help your immune system grow strong and healthy! Five easy steps that could last a lifetime!</p>
 							<ul class="actions stacked">
 								<li><a href="https://medium.com/@murwah6/5-steps-to-build-your-immune-system-26810a2bf090" class="button">Read More</a></li>
 							</ul>
@@ -95,8 +95,8 @@
 								</section>
 								<section>
 									<a href="https://www.health.harvard.edu/topics/staying-healthy"><span class="icon style2 major fa-stethoscope"></span></a>
-									<h3>Harvard Health</h3>
-									<p>Read this article for some outsider information about maintaining a healthy lifestyle.</p>
+									<h3>Harvard Medical Health</h3>
+									<p>Want some more information on how to maintain a healthy lifestyle? Want information that pertains to overall health? Read all about it here in this article. This detailed article can help guide the decisions you make regarding your well-being.</p>
 								</section>
 							</div>
 						</div>
