--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>5 Steps to Build Your Immune System</h2>
-							<p>When cold season comes around you will want to be prepared. Use these five steps to help your immune system grow strong and healthy! Five easy steps that could last a lifetime!</p>
+							<p>When cold season comes around you'll want to be prepared. Use these five steps to help your immune system grow strong and healthy! Five easy steps that could last a lifetime!</p>
 							<ul class="actions stacked">
 								<li><a href="https://medium.com/@murwah6/5-steps-to-build-your-immune-system-26810a2bf090" class="button">Read More</a></li>
 							</ul>
@@ -80,7 +80,7 @@
 				<!-- Six -->
 					<section class="wrapper style1 align-center">
 						<div class="inner">
-							<h2>Want more information? Here are some more tips on how stay healthy!</h2>
+							<h2>Want more information? Here are some more tips on how to stay healthy!</h2>
 
 							<div class="items style1 medium onscroll-fade-in">
 								<section>
@@ -91,12 +91,12 @@
 								<section>
 									<a href="https://www.youtube.com/watch?v=9tXQ0ovM5qY&feature=youtu.be"><span class="icon style2 major fa-youtube"></span></a>
 									<h3>Healthy Hokies Challenge</h3>
-									<p>Watch as two undergraduate students attempt a week-long healthy challenge while juggling their rigorous work load.Is it possible to eat the right amount of calories, get enough sleep and exercise every day in college? Watch and find out!</p>
+									<p>Watch as two undergraduate students attempt a week-long healthy challenge while juggling school work.Is it possible to eat the right amount of calories, get enough sleep and exercise every day in college? Watch and find out!</p>
 								</section>
 								<section>
 									<a href="https://www.health.harvard.edu/topics/staying-healthy"><span class="icon style2 major fa-stethoscope"></span></a>
 									<h3>Harvard Medical Health</h3>
-									<p>Want some more information on how to maintain a healthy lifestyle? Want information that pertains to overall health? Read all about it here in this article. This detailed article can help guide the decisions you make regarding your well-being.</p>
+									<p>Want some more information on how to maintain a healthy lifestyle? Read all about it here in this article. This detailed article can help guide the decisions you make regarding your well-being.</p>
 								</section>
 							</div>
 						</div>
